# ClassicMap_back

./: .env.example  .gitignore  ADMIN_SETUP.md  CLERK_AUTH_SETUP.md  Cargo.toml  Dockerfile  Rocket.toml  UPLOAD_API.md  USER_ROLE_GUIDE.md  docker-compose.yml  schema.sql  update_users_table.sql
migrations/: add_awards_to_artists.sql
src/: lib.rs  logger.rs  main.rs  upload.rs
src/artist/: api.rs  model.rs  repository.rs  service.rs
src/auth/: guards.rs  jwt.rs  mod.rs
src/boxoffice/: api.rs  mod.rs  model.rs  repository.rs  service.rs
src/composer/: api.rs  model.rs  repository.rs  service.rs
src/concert/: api.rs  mod.rs  model.rs  repository.rs  service.rs
src/config/: api.rs
src/db/: mod.rs
src/hall/: model.rs  repository.rs
src/kopis/: api.rs  client.rs  concert_scheduler.rs  mod.rs  models.rs  scheduler.rs  service.rs
src/performance/: api.rs  mod.rs  model.rs  repository.rs  service.rs
src/performance_sector/: api.rs  mod.rs  model.rs  repository.rs  service.rs
src/piece/: api.rs  model.rs  repository.rs  service.rs
src/recording/: api.rs  model.rs  repository.rs  service.rs
src/user/: api.rs  model.rs  repository.rs  service.rs
src/venue/: api.rs  mod.rs  model.rs  repository.rs  service.rs
tests/: artist_service_tests.rs  composer_service_tests.rs  concert_service_tests.rs  piece_service_tests.rs  user_service_tests.rs
