[package]
name = "ClassicMap_back"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "mysql",
  "chrono",
  "time",
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
colored = "2.1"
rocket_cors = "0.6"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "mysql",
  "chrono",
  "time",
  "migrate",
] }
