[package]
name = "ClassicMap_back"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "mysql",
  "chrono",
  "time",
  "rust_decimal",
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
colored = "2.1"
rocket_cors = "0.6"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.39.0"
serde-xml-rs = "0.6"
